# QAGuru9_18

poetry_proj/: pyproject.toml
